--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -6,4 +6,12 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+security.oauth2.client.client-id=dscatalog
+security.oauth2.client.client-secret=descatalog123
+
+jwt.secret=MT-JWT-SECRET
+jwt.duration=86400
